           convenient for setting fields like "modification time".
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Changed the inner SELECT syntax in MaxKeyGenerator to make it work
         with Hypersonic SQL.
         (Contributed by Santiago Arriaga <santiago@catnet.com.mx>)

JDO:     Hypersonic SQL driver.
         (Contributed by Santiago Arriaga <santiago.arriaga@catnet.com.mx>)

Version 0.8.7  June 2, 2000
---------------------------

JDO:     Informix JDBC driver. (Contributed by Santiago Arriaga
         <santiago.arriaga@catnet.com.mx>)

JDO:     SEQUENCE key generator now works with Oracle. It has a special
         RETURNING mode for Oracle8i which is more efficient because
         obtains the identity during INSERT, without any additional SQL queries.
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Added three paramaterized type convertors: Date<->Integer,
         Date<->BigDecimal and Date<->String. The latter uses the SimpleDateFormat
         patterns (e.g. char[MMM d, yyyy]). The others uses similar
         but shortened patterns (e.g. numeric[YMDhmsS], which is equivalent
         to "yyyyMMddhhmmssSSS" SimpleDateFormat pattern).
         (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Fixes to handling of dependent objects create/delete/modify during
         transaction commit. (Oleg Nitz <on@ibis.odessa.ua>)

JDO:     Added convertor from byte to short/integer. (Contributed by Harindranath P. R. Nair
         <hari.nair@alopa.com>)

XML:     Identity field will now use XML name provided in mapping file.

XML:     Marshaller will now accept both primitive and non-primitive types and apply the
         proper conversion; no dropped in convertor used, so Date/byte conversion should
         work as expected; added test case for type handling of XML. (Bug reported by
         Eitan Suez <eitan@uptodata.com>)

Misc:    Fixed security bug when running as an Applet. (Reported by Remus Pereni
         <remus@nolimits.ro>).
