@@ -171,11 +171,6 @@ persist.keyGenSQL=\
     SQL exception in the key generator: {0}.
 persist.keyGenFailed=\
     Fatal error in the key generator.
-persist.keyGenNoConvertor=\
-    The key generator returned the value that cannot be converted \
-    to the identity type.
-persist.keyGenWrongType=\
-    The key generator {0} doesn't support values of type {1}. 
 persist.deletedNotFound=\
     The deleted identity {0} isn't found in the LIFO list. 
 
@@ -261,6 +256,8 @@ mapping.wrongKeyGenParam=\
     Wrong value {0} of the parameter {1} for key generator {2}.
 mapping.dupKeyGen=\
     Duplicate key generator name {0}. Use aliases.
+mapping.keyGenSQLType=\
+    Key generator {0} doesn't support SQL type {1}.
 mapping.nested=\
     Nested error: {0}
 mapping.noRelation=\
